# ghg

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  rustfmt.toml
.github/workflows/: main.yml  manual_deploy.yml
ghg/: Cargo.toml
ghg-common/: Cargo.toml
ghg-common/src/: lib.rs
ghg-data-core/: Cargo.toml
ghg-data-core/src/: lib.rs  metadata.rs
ghg-data-processing/: Cargo.toml
ghg-data-processing/src/: data_model.rs  file_type.rs  lib.rs  read_data.rs  save_result.rs
ghg/src/: lib.rs  request_data.rs  utils.rs
ghg/src/application/: animation_loop.rs  control.rs  data.rs  frame_params.rs  lighting.rs  mod.rs  planet.rs  shaders.rs  sphere.rs  vertex.rs
ghg/src/application/shaders/: channels.glsl  color.glsl  data.frag  data.vert  math.glsl  planet.frag  planet.vert  pointmapping.glsl
ghg/src/interaction_core/: input_batch.rs  input_subscriber.rs  mod.rs  user_inputs.rs
ghg/src/render_core/: animation.rs  animation_params.rs  camera.rs  canvas.rs  frame_sequencer.rs  image.rs  mesh.rs  mod.rs  shader.rs  uniform.rs  viewport.rs
ghg/tests/: web.rs
ghg/www/: index.html  index.js  overlay.js  style.css
ghg/www/images/: README.md
ghg/www/images/earth_temp/: 2021-1980.01.metadata  2021-1980.02.metadata  2021-1980.06.metadata  2021-1980.07.metadata  2021-1980.08.metadata  2021-1980.12.metadata  2021.01.04.metadata  2021.05.08.metadata  2021.09.12.metadata
ghg/www/wasm/: ghg.d.ts  ghg.js  ghg_bg.wasm  ghg_bg.wasm.d.ts  package.json
ghg/www/wasm/snippets/ghg-5f1c021f16145f2d/www/: overlay.js
single-thread-executor/: Cargo.toml
single-thread-executor/src/: lib.rs
src/: lib.rs  utils.rs
src/application/: animation_loop.rs  control.rs  data.rs  lighting.rs  mod.rs  planet.rs  shaders.rs  sphere.rs  vertex.rs
src/application/shaders/: data.frag  data.vert  planet.frag  planet.vert
src/data_core/: mod.rs  request_data.rs
src/data_processing/: data_model.rs  file_type.rs  mod.rs  read_data.rs  save_result.rs
src/interaction_core/: input_batch.rs  input_subscriber.rs  mod.rs
src/render_core/: animation.rs  camera.rs  canvas.rs  image.rs  mesh.rs  mod.rs  smart_uniform.rs  uniform.rs
www/: index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
www/images/: README.md
www/images/earth_temp/: 2021-1980.03.metadata  2021-1980.04.metadata  2021-1980.05.metadata  2021-1980.09.metadata  2021-1980.10.metadata  2021-1980.11.metadata
