[workspace]
members = [
    "ghg",
    "ghg-common",
    "ghg-data-core",
    "ghg-data-processing",
]
default-members = [
    "ghg",
    "ghg-common",
    "ghg-data-core",
]

[profile.release]
#debug = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
