[workspace]
members = [
    "ghg",
    "ghg-common",
    "ghg-data-core",
    "ghg-data-processing",
    "single-thread-executor",
]
default-members = [
    "ghg",
    "ghg-common",
    "ghg-data-core",
    "single-thread-executor",
]

[profile.release]
debug = true
opt-level = "s"
lto = true

[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
