[package]
name = "ghg-data-processing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "debug_cdf_file"
required-features = [
    "read_netcdf",
]

[[bin]]
name = "merra2_inst_2d_data_export"
required-features = [
    "read_netcdf",
]

[features]
read_netcdf = ["hdf5-sys", "netcdf-src", "netcdf"] # Requires HDF5 to be installed, or build with `--features hdf5-sys/static,netcdf-src/static`

[dependencies]
ghg-common = { path = "../ghg-common", version = "0.1.0" }
ghg-data-core = { path = "../ghg-data-core", version = "0.1.0" }
itertools = "0.10.3"
serde = "1.0"
serde_json = "1.0"
image = "0.24.2"
hdf5-sys = { version = "0.8.1", optional = true }
netcdf-src = { version = "0.3.0", optional = true }
netcdf = { version = "0.8.1", optional = true }
